k8s/app/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rr-frontend-deployment
  namespace: rr-app
  labels:
    app: frontend
    env: development
  annotations:
    kubernetes.io/change-cause: "Initial release with rr-frontend:v3"
spec:
  replicas: 1
  revisionHistoryLimit: 10 # old replicasets kept for rollback (default: 10)
  minReadySeconds: 5 # seconds pods must be ready before counted avilable (default:0)
  progressDeadlineSeconds: 300 # mark rollout stalled after N seconds (default: 600)
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # allow 1 extra pod during update. (default is 25 %)
      maxUnavailable: 0 # keep all existing pods available. (default is 25%)
  template:
    metadata:
      labels:
        app: frontend
        environment: development
    spec:
      containers:
        - name: rr-frontend--container
          image: xrootms/app-frontend:c8919ad # v3 image created for ingress setup REACT_APP_API_URL=/api/v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe: # Liveness GET / every 5 sec. If failed: restart pod.
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2 # Wait 2 seconds after container starts BEFORE first health check
            periodSeconds: 5 # Run health check every 5 seconds
          readinessProbe: #  Readiness  GET / every 5 sec. 2 successful checks before traffic allowed.
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 2 # 2 successful checks in a row before marking pod Ready
          resources:
            requests: # Dont schedule this Pod unless the node has at least.
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
