k8s/app/frontend/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: rr-frontend-service
  namespace: rr-app
  labels:
    app: frontend
    env: development
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
